Updated from java 8 to java 13